--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,8 +37,19 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.1.0",
+    "@babel/eslint-parser": "^7.28.0",
+    "@babel/preset-react": "^7.27.1",
+    "@typescript-eslint/eslint-plugin": "^8.35.1",
+    "@typescript-eslint/parser": "^8.35.1",
     "autoprefixer": "^10.4.7",
-    "postcss": "^8.4.14"
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-testing-library": "^7.5.3",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.0"
   }
 }
